--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,5 +4,5 @@ import { HomeContent } from '../components/home/HomeContent';
 ---
 
 <Layout title="Croche By Ameesha | Handmade with Love">
-  <HomeContent client:load />
+  <HomeContent client:visible />
 </Layout>
