--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import Navbar from "../components/layout/Navbar"
 import '../assets/css/global.css';
-
+import Footer from "../components/layout/Footer";
 interface Props {
   title?: string;
   description?: string;
@@ -26,6 +26,7 @@ const {
   <body>
     <Navbar client:load />
     <slot />
+    <Footer client:load />
   </body>
 </html>
 
